<resources>
    <string name="app_name">Fits</string>
    <string name="garment_size">Size</string>
    <string name="garment_color">Color</string>
    <string name="garment_brand">Brand</string>
    <string name="garment_store">Store</string>
    <string name="garment_description">Description</string>
    <string name="garment_type">Garment Type</string>
    <string name="type">Type</string>
    <string name="garment_date">Date Created</string>

    <string name="ok">Ok</string>
    <string name="radio_hats">Hats</string>
    <string name="radio_tops">Tops</string>
    <string name="radio_pants">Pants</string>
    <string name="radio_shoes">Shoes</string>
    <string name="new_item_dialog_title">Select Type:</string>

    <string name="new_garment">New Item</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d items</string>
    <string name="remove_garment">Remove Item</string>

    <string name="list_item_date_created">Date Created:\u0020</string>
    <string name="list_item_size">Size:\u0020</string>

    <string name="launch_fits_button">Fits</string>
    <string name="launch_outfits_button">Outfits</string>

    <string name="new_outfit">New Outfit</string>
    <string name="remove_outfit">Remove Outfit</string>
    <string name="enter_name">Enter name</string>
</resources>
